--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
 *.tlog
+*.obj
+*.pdb
+*.idb
+*.log
 /.vs/
 /CSC8503/CSC8503Common/Debug/
 /CSC8503/GameTech/Debug/
+/Win32/Debug/CSC8503Common.lib
+/Win32/Debug/CSC8503Common.pdb
+/Win32/Debug/Common.lib
+/Win32/Debug/Common.pdb
+/Win32/Debug/GameTech.exe
+/Win32/Debug/GameTech.ilk
+/Win32/Debug/GameTech.pdb
+/Win32/Debug/Networking-ENet.lib
+/Win32/Debug/Networking-ENet.pdb
+/Win32/Debug/OpenGLRendering.lib
+/Win32/Debug/OpenGLRendering.pdb
