--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 /Win32/Debug/Networking-ENet.pdb
 /Win32/Debug/OpenGLRendering.lib
 /Win32/Debug/OpenGLRendering.pdb
+/CSC8503/GameTech/Release/
+/Release/
+/Win32/Release/
